# RBCV-Region-Based-Coverage-Navigation-

./: .gitignore  README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/coverage_regions_ros/: partition_labels_publisher.py
devel/lib/pkgconfig/: coverage_regions_ros.pc  map_tools.pc  rbcv_bringup.pc
devel/lib/rbcv_bringup/: regions_to_survey_zones.py
devel/share/coverage_regions_ros/cmake/: coverage_regions_rosConfig.cmake
devel/share/map_tools/cmake/: map_toolsConfig.cmake
devel/share/rbcv_bringup/cmake/: rbcv_bringupConfig.cmake
src/: FILES.md  Kimera部署指南.md  RBCV_语义探索与加权路径_方法论.md  README.md  ROS2终端指令.md  USAGE.md  WORKSPACE_LAYOUT.md  requirements.txt
src/coverage_planner/: README.md
src/coverage_planner/coverage_planner/: __init__.py  candidates.py  map_io.py  planner.py  refine.py  region_io.py  region_planner.py  set_cover.py  visibility.py  viz.py
src/coverage_planner/examples/: README.md  demo_regions.py  draw_regions.py  preview_real_map.py  preview_regions.py
src/coverage_planner/scripts/: README.md  demo_regions.py  draw_regions.py  preview_real_map.py  preview_regions.py
src/coverage_planner/tests/: README.md  test_map_io_occupancy.py  test_region_planner.py  test_set_cover.py
src/coverage_regions_ros/: CMakeLists.txt  README.md  package.xml
src/coverage_regions_ros/launch/: README.md  publish_partition_labels.launch
src/coverage_regions_ros/scripts/: README.md
src/exploration/: README.md  __init__.py  aggregation.py  config.py  costmap.py  detection_zones.py  fusion.py  pipeline.py  planner.py  pose_stream.py  regions_bridge.py  rosbag_ros1.py  zoning.py
src/exploration/data/: detections.example.jsonl  survey_zones.example.json  zones.example.json
src/exploration/ros1_bridge/: README.md  detection_recorder_node.py
src/exploration/scripts/: dump_ros1_poses.py  inspect_rosbag1.py  run_semantic_stack.py
src/exploration/survey/: __init__.py  coverage_geometry.py  pose_timeline.py  rosbag_merge.py  stack.py  zone_catalog.py
src/exploration/tests/: test_smoke.py  test_survey_geometry.py
src/exploration_core_cpp/: CMakeLists.txt  README.md
src/exploration_core_cpp/src/: rbcv_plan_tour.cpp
src/lkh3_python/: README.md  example.py  lkh3.py
src/map_tools/: CMakeLists.txt  README.md  package.xml
src/map_tools/launch/: README.md  publish_static_map.launch
src/map_tools/maps/: README.md  map7.pgm  map7.yaml  map8.pgm  map8.yaml  my_regions.json  rbcv_semantic_plan.json  rbcv_survey_zones.json  regions_map7.example.json
src/map_tools/python/map_tools/: __init__.py  bootstrap.py  bridge.py  paths.py
src/map_tools/scripts/: README.md
src/rbcv_bringup/: CMakeLists.txt  README.md  package.xml
src/rbcv_bringup/launch/: rbcv_map_and_regions.launch  rbcv_stage1_partitions_to_survey.launch  rbcv_stage2_semantic_explore.launch
src/rbcv_bringup/scripts/: rbcv_semantic_stack_cli.py  regions_to_survey_zones.py
src/rbcv_disk_coverage/: README.md
src/rbcv_disk_coverage/coverage_planner/: README.md  candidates.py  corridor_split.py  map_io.py  mpl_zh.py  planner.py  refine.py  region_planner.py  set_cover.py  visibility.py
src/rbcv_disk_coverage/docs/: ALGORITHM.md  README.md
src/rbcv_disk_coverage/scripts/: README.md  demo_regions.py  preview_real_map.py
src/rbcv_disk_coverage/tests/: README.md  test_corridor_split.py  test_region_planner.py  test_regions.py  test_set_cover.py
(+1 files in other folders)
